удаляет ширину 1600px
удаляет outline, убирает ширину section 1600рх, редактирует блок "чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -125,17 +129,18 @@
       </section>
 
       <!--чем мы занимаемся-->
-      <section class="section">
+      <section class="what-we-do section">
         <div class="what-we-do-container container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="applications list">
-            <li class="item">
+            <li class="applications-card item">
               <a href="" class="link">
                 <img
                   src="./images/index-images/1.jpg"
                   alt="Десктопные приложения"
                   width="370"
                   height="294"
+                  class="app-image"
                 />
               </a>
               <h3 class="applications-type upper">Десктопные приложения</h3>
@@ -167,7 +172,7 @@
       </section>
 
       <!--наша команда-->
-      <section class="section">
+      <section class="team-section section">
         <div class="our-team-container container">
           <h2 class="title">Наша команда</h2>
           <ul class="members list">
