--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <footer class="footer-section section">
       <div class="footer-container container">
         <div class="footer-contacts">
-          <a href="./index.html" lang="en" class="nav-container__studio link"
+          <a href="./index.html" lang="en" class="nav-container__logo link"
             >Web<span class="nav-container__studio--white"> Studio</span></a
           >
           <address class="contacts">
