добавляет классы лого в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
     <header class="page-header">
       <div class="header-container container">
         <nav class="nav-container">
-          <a href="./index.html" lang="en" class="logo link"
-            >Web<span class="studio-black"> Studio</span></a
+          <a href="./index.html" lang="en" class="nav-container__logo link"
+            >Web<span class="nav-container__studio"> Studio</span></a
           >
           <ul class="site-nav list">
             <li class="item">
@@ -256,8 +256,8 @@
     <footer class="footer-section section">
       <div class="footer-container container">
         <div class="footer-contacts">
-          <a href="./index.html" lang="en" class="logo link"
-            >Web<span class="studio-white"> Studio</span></a
+          <a href="./index.html" lang="en" class="nav-container__logo link"
+            >Web<span class="nav-container__studio--white"> Studio</span></a
           >
           <address class="contacts">
             <a
